--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,259 +20,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@400;700&family=Roboto+Slab:wght@900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'recipes/css/style.css' %}">
     <title>Document</title>
-    <style>
-        :root {
-            --color-primary: #269fe6;
-            --color-primary-hover: #2086c2;
-            --color-primary-dark: #13141f;
-            --color-primary-dark-hover: #212336;
-            --color-primary-light: #d4ecfa;
-            --color-primary-light-hover: #bdd8e7;
-
-            --color-white: #fff;
-            --color-black: #000;
-
-            --color-dark-text: #444;
-            --color-info-light: #cce5ff;
-            --color-debug-light: #cce5ff;
-            --color-success-light: #d4edda;
-            --color-alert-light: #fff3cd;
-            --color-warning-light: #fff3cd;
-            --color-error-light: #f8d7da;
-
-            --color-info-dark: #4d86c4;
-            --color-debug-dark: #4d86c4;
-            --color-success-dark: #4a9c5d;
-            --color-alert-dark: #927f40;
-            --color-warning-dark: #927f40;
-            --color-error-dark: #da525d;
-
-            --color-gray-0: #f9f9f9;
-            --color-gray-1: #e0e0e0;
-            --color-gray-2: #c7c7c7;
-            --color-gray-3: #aeaeae;
-            --color-gray-4: #959595;
-            --color-gray-5: #7d7d7d;
-            --color-gray-6: #646464;
-            --color-gray-7: #4b4b4b;
-            --color-gray-8: #323232;
-            --color-gray-9: #191919;
-
-            --font-primary: sans-serif;
-            --font-headings: 'Roboto Slab', serif;
-
-            --spacing-gutter-medium: 3rem;
-            --spacing-gutter-large: 4rem;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html {
-            font-size: 62.5%;
-        }
-
-        body {
-            font-size: 1.6rem;
-            font-family: var(--font-primary);
-            background: var(--color-gray-1);
-            color: var(--color-dark-text);
-        }
-
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            font-family: var(--font-headings);
-        }
-
-        .main-header-container {
-            background-color: var(--color-primary-dark);
-        }
-
-        .container {
-            max-width: 144rem;
-            margin: 0 auto;
-            padding: var(--spacing-gutter-medium);
-        }
-
-        .main-logo {
-            color: var(--color-white);
-            text-decoration: none;
-            font-size: 4rem;
-            display: flex;
-            flex-flow: row nowrap;
-            align-items: center;
-            justify-content: center;
-            width: fit-content;
-            margin: 0 auto;
-        }
-
-        .main-logo-icon {
-            margin-right: 2rem;
-        }
-
-        .search-form {
-            border: 0.2rem solid var(--color-primary-dark);
-            max-width: 64rem;
-            margin: 0 auto;
-            border-radius: .4rem;
-            position: relative;
-            transition: all 300ms ease-in-out;
-        }
-
-        .search-input,
-        .search-button {
-            padding: 1rem;
-            border: none;
-            background: none;
-            outline: none;
-            transition: all 300ms ease-in-out;
-        }
-
-        .search-input {
-            width: 100%;
-            padding-right: 3rem;
-        }
-
-        .search-button {
-            position: absolute;
-            top: 0;
-            right: 0rem;
-        }
-
-        .search-form:focus-within {
-            border-color: var(--color-primary);
-            background-color: var(--color-white);
-        }
-
-        .search-form:focus-within .search-button {
-            color: var(--color-primary);
-        }
-
-        .search-button:focus {
-            outline: .1rem solid var(--color-primary);
-            background: rgba(0, 0, 0, 0.5);
-        }
-
-        .main-content {
-            padding-top: 0;
-        }
-
-        .main-content-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(34rem, 1fr));
-            gap: var(--spacing-gutter-medium);
-        }
-
-        .recipe {
-            background-color: var(--color-white);
-            box-shadow: -0.5rem 0.5rem 1rem rgba(0, 0, 0, .2);
-            transition: all 300ms ease-in-out;
-            transform: scale(1);
-            border-radius: 0.5rem;
-            overflow: hidden;
-        }
-
-        .recipe:hover {
-            transform: scale(1.02);
-            box-shadow: -1rem 0.5rem 1rem rgba(0, 0, 0, .3);
-        }
-
-        .recipe img {
-            max-width: 100%;
-        }
-
-        .recipe-list-item {
-            max-width: 64rem;
-        }
-
-        .recipe-title-container {
-            padding: var(--spacing-gutter-medium);
-            padding-bottom: 2rem;
-        }
-
-        .recipe-author {
-            padding: 0 var(--spacing-gutter-medium);
-            color: var(--color-gray-4);
-        }
-
-        .recipe-content {
-            padding: var(--spacing-gutter-medium);
-            padding-top: 2rem;
-        }
-
-        .recipe-author a {
-            color: var(--color-primary);
-            text-decoration: none;
-            transition: all 300ms ease-in-out;
-        }
-
-        .recipe-author a:hover {
-            color: var(--color-primary-dark);
-
-        }
-
-        .recipe-meta-container {
-            display: flex;
-            flex-flow: row wrap;
-            padding: var(--spacing-gutter-medium);
-            background-color: var(--color-gray-1);
-        }
-
-        .recipe-meta {
-            display: flex;
-            flex-flow: column nowrap;
-            flex-shrink: 1;
-            flex-grow: 1;
-            text-align: center;
-        }
-
-        .recipe-meta-title {
-            font-size: 1.6rem;
-        }
-
-        .recipe-footer a {
-            background-color: var(--color-primary-dark);
-            display: block;
-            text-align: center;
-            text-decoration: none;
-            padding: 1.5rem var(--spacing-gutter-medium);
-            color: var(--color-white);
-            transition: all 300ms ease-in-out;
-        }
-
-        .recipe-footer a:hover {
-            filter: brightness(2);
-        }
-
-        .recipe-title-container {
-            padding: var(--spacing-gutter-medium);
-        }
-
-        .main-footer {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            color: var(--color-white);
-            background-color: var(--color-primary-dark);
-            padding: var(--spacing-gutter-large);
-        }
-
-        .main-footer a {
-            text-decoration: none;
-            color: var(--color-white);
-            transition: all 300ms ease-in-out;
-        }
-
-        .main-footer a:hover {
-            filter: brightness(1);
-        }
-    </style>
 </head>
