--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,16 +1,13 @@
-{% include 'recipes/partials/head.html' %}
-<body>
-    {% include 'recipes/partials/header.html' %}
-    {% include 'recipes/partials/search.html' %}
-    <main class="main-content-container">
-        <div class="main-content main-content-list container">
-            {% include 'recipes/partials/recipe.html' %}
-            {% include 'recipes/partials/recipe.html' %}
-            {% include 'recipes/partials/recipe.html' %}
-            {% include 'recipes/partials/recipe.html' %}
-        </div>
-    </main>
-    {% include 'recipes/partials/footer.html' %}
-    
-</body>
-</html>
+{% extends 'global/base.html' %}
+{% block content %}
+<div class="main-content main-content-list container">
+    {% for recipe in recipes %}
+        {% include 'recipes/partials/recipe.html' %}
+    {% empty %}
+    <div class="center m-y">
+        <h1>No recipes found here !!</h1>
+    </div>
+    {% endfor %}
+
+</div>
+{% endblock content %}
