--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,28 +1,42 @@
 <div class="recipe recipe-list-item">
+    {% if recipe.cover %}
     <div class="recipe-cover">
-        <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="Temporário">
+        <a href="{% url 'recipe-details' recipe.id %}">
+            <img src="{{recipe.cover.url}}" alt="{{recipe.title}}">
+        </a>
     </div>
+    {% endif %}
     <div class="recipe-title-container">
-        <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+        <a href="{% url 'recipe-details' recipe.id %}">
+            <h2 class="recipe-title"> {{recipe.title}} </h2>
+        </a>
     </div>
     <div class="recipe-author">
-        <span class="recipe-author-item">
-            <i class="fas fa-user"></i>
-            Otávio Miranda
-        </span>
+        {% if recipe.author is not None %}
+            <span class="recipe-author-item">
+                <i class="fas fa-user"></i>
+                {% if recipe.author.first_name %}
+                {{recipe.author.first_name}} {{recipe.author.last_name}}
+                {% else %}
+                {{recipe.author.username}}
+                {% endif %}
+            </span>
+        {% endif %}
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
-            16/10/2021 às 11:21
+            {{recipe.created_at |date:"d/m/Y"}} às {{recipe.created_at |date:"H:m"}}
         </span>
-        <span class="recipe-author-item">
-            <a href="/recipes/category/cafe-da-manha/">
-                <i class="fas fa-layer-group"></i>
-                <span>Café da manhã</span>
-            </a>
-        </span>
+        {% if recipe.category is not None %}
+            <span class="recipe-author-item">
+                <a href="{% url 'category' recipe.category.id %}">
+                    <i class="fas fa-layer-group"></i>
+                    <span>{{recipe.category.name}}</span>
+                </a>
+            </span>
+        {% endif %}
     </div>
     <div class="recipe-content">
-        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam necessitatibus voluptatum doloribus facere officia vitae, autem quisquam, praesentium distinctio architecto, qui in corporis amet debitis cupiditate. Velit nisi deleniti nam?
+        <p> {{recipe.description}}
 
         </p>
     </div>
@@ -30,20 +44,32 @@
         <div class="recipe-meta recipe-preparation">
             <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> Preparo</h3>
             <div class="recipe-meta-text">
-                0 Minutos
+                {{recipe.preparation_time}} {{recipe.preparation_time_unit}} 
             </div>
         </div>
         <div class="recipe-meta recipe-servings">
             <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
             <div class="recipe-meta-text">
-                0 Porções
+                {{recipe.servings}} {{recipe.servings_unit}} 
             </div>
         </div>
     </div>
-    <footer class="recipe-footer">
-        <a class="recipe-read-more button button-dark button-full-width" href="/recipes/3/">
-            <i class="fas fa-eye"></i>
-            <span>ver mais...</span>
-        </a>
-    </footer>
+    {% if is_details_page is not True %}
+        <footer class="recipe-footer">
+            <a class="recipe-read-more button button-dark button-full-width" href="{% url 'recipe-details' recipe.id %}">
+                <i class="fas fa-eye"></i>
+                <span>ver mais...</span>
+            </a>
+        </footer>
+    {% endif %}
+    {% if is_details_page is True %}
+        <div class="preparation_steps">
+            {% if recipe.preparation_steps_is_html is True %}
+                {{recipe.preparation_steps|safe}}
+            {% else %}
+                {{recipe.preparation_steps|linebreaksbr}}
+            {% endif %}
+        </div>
+    {% endif %}
+    
 </div> 
