--- a/recipes/templates/recipes/pages/recipe-views.html
+++ b/recipes/templates/recipes/pages/recipe-views.html
@@ -1,13 +1,7 @@
-{% include 'recipes/partials/head.html' %}
-<body>
-    {% include 'recipes/partials/header.html' %}
-    {% include 'recipes/partials/search.html' %}
-    <main class="main-content-container">
-        <div class="main-content main-content-detail container">
-            {% include 'recipes/partials/recipe.html' %}
-        </div>
-    </main>
-    {% include 'recipes/partials/footer.html' %}
-    
-</body>
-</html>
+{% extends 'global/base.html' %}
+{% block title %}{{recipe.title}} |{% endblock title %}
+{% block content %}
+<div class="main-content main-content-detail container">
+    {% include 'recipes/partials/recipe.html' %}
+</div>
+{% endblock content %}
