--- a/recipes/templates/recipes/partials/header.html
+++ b/recipes/templates/recipes/partials/header.html
@@ -1,9 +1,9 @@
 <header class="main-header-container">
     <div class="main-header container">
         <h1>
-            <a class="main-logo" href="#">
+            <a class="main-logo" href="{% url 'recipes-home' %}">
                 <i class="fas fa-utensils "class="main-logo-icon">
-                    <spanclass="main-logo-text">Recipes {{ name }}</span>
+                    <spanclass="main-logo-text">Recipes</span>
                 </i>
             </a>
         </h1>
