--- a/recipes/templates/recipes/partials/search.html
+++ b/recipes/templates/recipes/partials/search.html
@@ -1,7 +1,7 @@
 <div class="search-container">
     <div class="container">
-        <form action="" class="search-form">
-            <input type="search" class="search-input" name="search" >
+        <form action="{% url 'search' %}" method='GET' class="search-form">
+            <input type="search" class="search-input" value="{{search_term}}" name="search" required >
             <button type="submit"class="search-button"><i class="fas fa-search"></i></button>
         </form>
     </div>
