organização dos ficheiros

--- a/base_template/global/partials/head.html
+++ b/base_template/global/partials/head.html
@@ -16,4 +16,4 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@400;700&family=Roboto+Slab:wght@900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'recipes/css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
