--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -2,19 +2,11 @@
 
 {% block title %}Register |{% endblock title %}
 {% block content %}
-    <div class="main-content container center">
-        <h2>REGISTER</h2>
-    </div>
-    <div class="main-content container center">
-        <form action="" method='POST'>
-            <div class="form-content">
-                {% for field in form %}
-                    {{field}}
-                {% endfor %}
-            </div>
-            
-        </form>
-    </div>
+<div class="main-content container center">
+    <h2>REGISTER</h2>
+</div>
+{% include 'global/partials/messages.html' %}
+{% include 'global/partials/form.html' %}
 {% endblock content %}
 
 
