--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -359,7 +359,18 @@ h6 {
   }
 
   /* forms*/
-
+  .inline-form {
+    display: inline;
+  }
+  
+  .plaintext-button {
+    display: inline;
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: var(--color-primary);
+    font-size: 1.6rem;
+  }
  .form-content {
     max-width: 64rem;
     margin: 0 auto;
