--- a/authors/templates/authors/partials/login_message.html
+++ b/authors/templates/authors/partials/login_message.html
@@ -1,12 +1,14 @@
 {% if user.is_authenticated %}
-<div class="login-message">
-  Your are logged in with 
-  {{ request.user.username }}. 
-  Please, 
-  <form class="inline-form" action="{% url 'logout' %}" method='POST'>
-    {% csrf_token %}
-    <input type="hidden" name="username" value="{{ request.user.username }}">
-    <button class="plaintext-button" type="submit">click here</button>
-  </form> to logout.
-</div>
+  <div class="login-message">
+    Your are logged in with 
+    {{ request.user.username }}. 
+    Please, 
+    <a href="{% url 'dashboard' %}">See your recipes</a> or 
+    <a href="{% url 'dashboard_recipe_new' %}">create a new recipe</a> or 
+    <form class="inline-form" action="{% url 'logout' %}" method='POST'>
+      {% csrf_token %}
+      <input type="hidden" name="username" value="{{ request.user.username }}">
+      <button class="plaintext-button" type="submit">click here</button>
+    </form> to logout.
+  </div>
 {% endif %}
