--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -67,7 +67,13 @@ h5,
 h6 {
     font-family: var(--font-headings);
 }
-
+img {
+    max-width: 100%;
+  }
+  a {
+    color: var(--color-primary);
+    text-decoration: none;
+  }
 .main-header-container {
     background-color: var(--color-primary-dark);
 }
@@ -287,6 +293,9 @@ h6 {
 .center {
     text-align: center;
 }
+.left {
+    text-align: left;
+}
 .m-x{
     margin: var(--spacing-gutter-medium);
 }
@@ -385,11 +394,16 @@ h6 {
   .errorlist{
     color: var(--color-error-dark);
   }
-  .form-content input {
+  .form-content input,
+  .form-content textarea,
+  .form-content select {
     width: 100%;
     padding: 1rem;
     border-radius: 0.4rem;
     border: 0.1rem solid var(--color-primary-dark);
+  }
+  .span-2 {
+    grid-column: span 2;
   }
   .form-content button {
     padding: 1rem;
@@ -403,6 +417,28 @@ h6 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap: var(--spacing-gutter-medium);
+  }
+
+  .authors-dashboard-container {
+    max-width: 64rem;
+    text-align: left;
+    padding: var(--spacing-gutter-medium);
+    margin: 0 auto;
+  }
+  
+  .authors-dashboard-container h3,
+  .authors-dashboard-container p,
+  .authors-dashboard-container ul {
+    list-style-type: none;
+    margin: 1rem 0;
+  }
+  .authors-dashboard-container ul li a{
+    text-decoration: none;
+    transition: all 300ms ease-in-out;
+    color: var(--color-primary);
+  }
+  .authors-dashboard-container ul li a:hover{
+    color: var(--color-white);
   }
   @media (max-width:600px ){
     .main-content-list, .form-content-grid {
