--- a/authors/templates/authors/pages/dashboard.html
+++ b/authors/templates/authors/pages/dashboard.html
@@ -6,8 +6,30 @@
   <div class="main-content center container">
     <h2>Dashboard ({{ user }})</h2>
     {% include 'authors/partials/login_message.html' %}
+    {% include 'global/partials/messages.html' %}
+    <div class="authors-dashboard-container">
+      <h3>Your recipes</h3>
+      <ul>
+        {% for recipe in recipes %}
+          <li>
+            <a href="{% url 'dashboard_recipe_edit' recipe.id %}">{{ recipe.title }}</a>
+            <form 
+            class="inline-form form-delete" 
+            action="{% url 'dashboard_recipe_delete' %}" - 
+            method='POST'
+            >
+              {% csrf_token %}
+              <input type="hidden" name="id" value="{{ recipe.id }}">
+              <button class="plaintext-button" type="submit">❌</button>
+            </form>
+          </li>
+        {% empty %}
+          <li>
+            <p>You do not have recipes, please create one.</p>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
   </div>
-
   {% include 'global/partials/messages.html' %}
-
   {% endblock content %}
