--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -23,7 +23,10 @@
     {% include 'authors/partials/login_message.html' %}
 </div>
 {% include 'global/partials/messages.html' %}
-{% include 'global/partials/form.html' %}
+{% if not user.is_authenticated %}
+  {% include 'global/partials/form.html' %}
+{% endif %}
+
 {% endblock content %}
 
 
