--- a/base_template/global/partials/form.html
+++ b/base_template/global/partials/form.html
@@ -1,9 +1,9 @@
 <div class="main-content container">
-    <form action=" {{form_action}} " method='POST'>
+    <form action=" {{form_action}} " method='POST' enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-content form-content-grid">
             {% for field in form %}
-            <div class="form-group">
+            <div class="form-group {{ field.field.widget.attrs.class }}">
                 <label for="{{field.id_for_label}}">
                     {{field.label}}
                 </label>
@@ -13,6 +13,11 @@
                 {% endif %}
                 {{field.errors}}
             </div>
+            {% if field.name == 'cover' and field.value.url %}
+            <div class="span-2">
+                <img src="{{ field.value.url }}" alt="Capa para {{ recipe.title }}">
+            </div>
+            {% endif %}
             {% endfor %}
         </div>
         {% if form.errors is True %}
