--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,13 +1,13 @@
 <div class="recipe recipe-list-item">
     {% if recipe.cover %}
     <div class="recipe-cover">
-        <a href="{% url 'recipe-details' recipe.id %}">
+        <a href="{{ recipe.get_absolute_url }}">
             <img src="{{recipe.cover.url}}" alt="{{recipe.title}}">
         </a>
     </div>
     {% endif %}
     <div class="recipe-title-container">
-        <a href="{% url 'recipe-details' recipe.id %}">
+        <a href="{{ recipe.get_absolute_url }}">
             <h2 class="recipe-title"> {{recipe.title}} </h2>
         </a>
     </div>
