--- a/authors/templates/authors/partials/login_message.html
+++ b/authors/templates/authors/partials/login_message.html
@@ -5,10 +5,7 @@
     Please, 
     <a href="{% url 'dashboard' %}">See your recipes</a> or 
     <a href="{% url 'dashboard_recipe_new' %}">create a new recipe</a> or 
-    <form class="inline-form" action="{% url 'logout' %}" method='POST'>
-      {% csrf_token %}
-      <input type="hidden" name="username" value="{{ request.user.username }}">
-      <button class="plaintext-button" type="submit">click here</button>
-    </form> to logout.
+    {% include 'authors/partials/form_logout.html' %}
+  <a class="authors-logout-link" href="#">click here</a> to logout.
   </div>
 {% endif %}
